# sparql-to-mermaid

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
docs/: PORTING_NOTES.md
src/sparql_to_mermaid/: __init__.py  __main__.py  algebra.py  collapse.py  errors.py  expr.py  naming.py  paths.py  prefixes.py  render.py  well_known.py
tests/: test_mermaid.py
