[project]
name = "sparql-to-mermaid"
version = "0.5.0"
description = "Render a SPARQL query as a Mermaid graph diagram (Python port of sparql-examples-utils' mermaid converter)"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause AND MIT"
authors = [
    { name = "Peter W. Rose", email = "pwrose.ucsd@gmail.com" },
]
dependencies = [
    "rdflib>=7",
]

[project.urls]
Repository = "https://github.com/sbl-sdsc/sparql-to-mermaid"

[project.scripts]
sparql-to-mermaid = "sparql_to_mermaid.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparql_to_mermaid"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
